--- a/src/components/form/style.css
+++ b/src/components/form/style.css
@@ -1,9 +1,32 @@
 .form_container {
   position: relative;
-  margin: 0 auto;
-  width: 95%;
+  width: 100%;
   height: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.input_group span {
+  font-size: 1.2rem;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.input_group input {
+  height: 2rem;
+  width: 12rem;
+  border-radius: 10px;
+  border: 2px solid green;
+  font-size: 1.2rem;
+}
+
+.form_container button {
+  font-size: 1.2rem;
+  width: 12rem;
+  height: 2.5rem;
+  border: 2px solid green;
+  border-radius: 10px;
+  padding: 5px 0;
+  margin-right: 20px;
 }
