--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -2,4 +2,10 @@
   width: 100%;
   height: 150px;
   background-color: aquamarine;
+  border-radius: 12px;
+}
+
+.header h1 {
+  padding: 10px 10px;
+  margin-bottom: 0;
 }
