--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,11 +1,13 @@
 .header {
+  color: #fef5ed;
   width: 100%;
   height: 150px;
-  background-color: aquamarine;
+  background-color: #adc2a9;
   border-radius: 12px;
 }
 
 .header h1 {
+  font-weight: bold;
   padding: 10px 10px;
   margin-bottom: 0;
 }
