--- a/src/components/list/style.css
+++ b/src/components/list/style.css
@@ -1,14 +1,19 @@
+h1 {
+  color: #576057;
+}
+
 .todo_container {
   min-height: 400px;
   display: flex;
+  flex-wrap: wrap;
   margin: 0 10px;
 }
 
 .todo_card {
   width: 270px;
   height: 210px;
-  background-color: white;
-  border: 2px solid green;
+  background-color: #fcf7f3;
+  border: 2px solid #99a799;
   border-radius: 15px;
   padding: 0 10px 10px 10px;
   margin: 10px;
@@ -18,11 +23,12 @@
 }
 
 .todo_card .title {
+  color: #576057;
   width: 250px;
   font-size: 1.4rem;
   margin: 10px 0 0 0;
   padding-bottom: 5px;
-  border-bottom: 1px solid green;
+  border-bottom: 1px solid #99a799;
   text-align: center;
 }
 
@@ -30,15 +36,16 @@
   width: 250px;
   height: 100px;
   margin-bottom: 5px 0;
-  background-color: rgb(209, 209, 209);
+  background-color: #fcf7f3;
 }
 
 .todo_card span button {
+  color: #576057;
   width: 115px;
   font-size: 1.2rem;
   padding: 5px 10px;
-  background-color: white;
-  border: 1.5px solid green;
+  background-color: #d3e4cd;
+  border: 1.5px solid #99a799;
   border-radius: 10px;
   transition: all 0.2s;
 }
@@ -52,11 +59,11 @@
 }
 
 .todo_card span button:hover {
-  color: white;
+  color: #fef5ed;
   width: 115px;
   font-size: 1.2rem;
   padding: 5px 10px;
-  background-color: green;
-  border: 1.5px solid green;
+  background-color: #adc2a9;
+  border: 1.5px solid #adc2a9;
   border-radius: 10px;
 }
