--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,4 +1,4 @@
-.header {
+header {
   color: #fef5ed;
   width: 100%;
   height: 150px;
@@ -6,7 +6,7 @@
   border-radius: 12px;
 }
 
-.header h1 {
+header h1 {
   font-weight: bold;
   padding: 10px 10px;
   margin-bottom: 0;
